Extend roles concept

--- a/roles/installer/tasks/app.yml
+++ b/roles/installer/tasks/app.yml
@@ -1,3 +1,5 @@
 ---
 - name: Copy {{installer_source}}/{{app_name}}.app to Applications directory
   command: cp -R "{{installer_source}}/{{app_name}}.app" /Applications
+  notify:
+    - cleanup 
