--- a/roles/installer/tasks/unzip.yml
+++ b/roles/installer/tasks/unzip.yml
@@ -1,4 +1,6 @@
 ---
 - name: Unzipping {{app_name}}.zip
   unarchive: src={{downloads}}/{{app_name}}.zip dest={{downloads}}/ copy=no
+  notify:
+    - cleanup
   
