--- a/roles/firefox/vars/main.yml
+++ b/roles/firefox/vars/main.yml
@@ -1,5 +1,4 @@
 app_name: Firefox
 app_url: https://download.mozilla.org/?product=firefox-latest-ssl&os=osx&lang=en-US
-installer_type: app
-install_method: dmg
+install_method: app
 download_file_type: dmg
