--- a/roles/installer/tasks/app.yml
+++ b/roles/installer/tasks/app.yml
@@ -1,5 +1,23 @@
 ---
-- name: Copy {{installer_source}}/{{app_name}}.app to Applications directory
-  command: cp -R "{{installer_source}}/{{app_name}}.app" /Applications
+- name: Download {{app_name}} to {{downloads}}
+  get_url: 
+    url: "{{app_url}}"
+    dest: "{{downloads}}/{{app_name}}.{{download_file_type}}"
+- include: unzip.yml
+  when: download_file_type == "zip"
+- include: mount.yml
+  when: installer_type == "dmg"
+- name: Install package {{app_name}}
+  shell: installer -pkg "{{installer}}" -target /
+  when: installer_type == "pkg"
   notify:
-    - cleanup 
+    - cleanup
+- name: Remove existing app if present
+  file: 
+    path: /Applications/{{installer | basename}}.app 
+    state: absent
+- name: Copy {{app_name}} to Applications directory
+  shell: cp -R "{{installer}}" /Applications
+  when: installer_type == "app"
+  notify:
+    - cleanup
