--- a/roles/installer/tasks/main.yml
+++ b/roles/installer/tasks/main.yml
@@ -1,12 +1,7 @@
 ---
 # tasks file for roles
-- include: download.yml
-- include: unzip.yml
-  when: download_file_type == "zip"
-- include: rm_dup.yml
-- include: mount.yml
-  when: download_file_type == "dmg"
-- include: app.yml
-  when: installer_type == "app"
-- include: unmount.yml
-  when: download_file_type == "dmg"
+- name: Create Ansible downloads directory
+  file: 
+    path: "{{downloads}}"
+    state: directory
+- include: '{{install_method}}.yml'
