Pre-install IntelliJ plugins

--- a/roles/installer/tasks/unzip.yml
+++ b/roles/installer/tasks/unzip.yml
@@ -4,6 +4,7 @@
     src: "{{downloads}}/{{app_name}}.zip"
     dest: "{{downloads}}/"
     copy: no
+    remote_src: yes
 - name: Find unzipped files
   find:
     paths: "{{downloads}}/"
