--- a/roles/installer/tasks/brew.yml
+++ b/roles/installer/tasks/brew.yml
@@ -1,10 +1,10 @@
----
+#---
+- shell: |
+     whoami
+  become: no
+  register: homebrew_user
 - name: Install {{brew_formula_name}} with brew
-  block:
-    - name: Upgrade {{brew_formula_name}} with brew
-      command: /usr/local/bin/brew upgrade {{brew_formula_name}}
-      become: false
-  rescue:
-    - name: "{{brew_formula_name}} is not yet installed, installing it"
-      command: /usr/local/bin/brew install {{brew_formula_name}}
-      become: false
+  shell: |
+     /usr/local/bin/brew install --force {{brew_formula_name}}
+  become: yes
+  become_user: "{{homebrew_user}}"
